# Agentic-Procurement-System

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  schema.sql
backend/scripts/: auth_gmail.py  test_live_plan.py
backend/src/: main.py  mcp_server.py
backend/src/agents/: __init__.py  graph.py  manager.py
backend/src/agents/tools/: __init__.py  automation.py  evaluation.py  history.py  quotes.py  report.py  rfq.py  stock.py
backend/src/agents/workers/: __init__.py  evaluation.py  intake.py  inventory.py  reporting.py  sourcing.py
backend/src/api/: __init__.py  routes.py  sse.py
backend/src/core/: __init__.py  config.py  schemas.py  state.py
backend/src/database/: __init__.py  client.py
backend/src/services/: __init__.py  gmail.py  scoring.py
backend/tests/: __init__.py  conftest.py  test_interrupt_resume.py  test_manager.py  test_repository.py  test_routes.py  test_scoring.py  test_sse.py  test_tools.py  test_workers.py
docs/superpowers/plans/: 2026-07-01-procurement-implementation.md
docs/superpowers/specs/: 2026-07-01-procurement-system-design.md
frontend/: .env  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json
frontend/src/: App.jsx  ReplyPrompt.jsx  index.css
