[project]
name = "agentic-procurement-system"
version = "0.1.0"
description = "AI Procurement Operations Multi-Agent System Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.15",
    "pydantic>=2.11",
    "langgraph>=0.5",
    "langchain-google-genai>=2.1",
    "python-multipart>=0.0.20",
    "pypdf>=5.5",
    "python-dotenv>=1.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
