[project]
name = "agentic-procurement-system"
version = "0.1.0"
description = "AI Procurement Operations Multi-Agent System Backend"
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34",
    "supabase==2.15",
    "langgraph==1.2.*",
    "langchain-google-genai==2.1.*",
    "langchain-core==1.4.*",
    "python-multipart==0.0.20",
    "pypdf==5.5",
    "python-dotenv==1.1",
    "fastmcp==2.*",
    "google-api-python-client==2.100",
    "google-auth-httplib2==0.2",
    "google-auth-oauthlib==1.2",
    "sse-starlette==2.1",
    "reportlab==4.2",
    "pytest==8.*",
    "pytest-asyncio==0.24",
    "pydantic==2.13.*",
    "ruff==0.15.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
